Update brotli to v1.0.5

--- a/src/Native/Unix/System.IO.Compression.Native/CMakeLists.txt
+++ b/src/Native/Unix/System.IO.Compression.Native/CMakeLists.txt
@@ -12,6 +12,7 @@ include_directories("../../AnyOS/brotli/include")
 set (NATIVECOMPRESSION_SOURCES
     ${NATIVECOMPRESSION_SOURCES}
     ../../AnyOS/brotli/common/dictionary.c
+    ../../AnyOS/brotli/common/transform.c
     ../../AnyOS/brotli/dec/bit_reader.c
     ../../AnyOS/brotli/dec/decode.c
     ../../AnyOS/brotli/dec/huffman.c
@@ -26,6 +27,7 @@ set (NATIVECOMPRESSION_SOURCES
     ../../AnyOS/brotli/enc/compress_fragment_two_pass.c
     ../../AnyOS/brotli/enc/dictionary_hash.c
     ../../AnyOS/brotli/enc/encode.c
+    ../../AnyOS/brotli/enc/encoder_dict.c
     ../../AnyOS/brotli/enc/entropy_encode.c
     ../../AnyOS/brotli/enc/histogram.c
     ../../AnyOS/brotli/enc/literal_cost.c
