--- a/src/Native/Windows/clrcompression/CMakeLists.txt
+++ b/src/Native/Windows/clrcompression/CMakeLists.txt
@@ -50,6 +50,7 @@ else()
         ${NATIVECOMPRESSION_SOURCES}
         clrcompression.def
         ../../AnyOS/brotli/common/dictionary.c
+        ../../AnyOS/brotli/common/transform.c
         ../../AnyOS/brotli/dec/bit_reader.c
         ../../AnyOS/brotli/dec/decode.c
         ../../AnyOS/brotli/dec/huffman.c
@@ -64,6 +65,7 @@ else()
         ../../AnyOS/brotli/enc/compress_fragment_two_pass.c
         ../../AnyOS/brotli/enc/dictionary_hash.c
         ../../AnyOS/brotli/enc/encode.c
+        ../../AnyOS/brotli/enc/encoder_dict.c
         ../../AnyOS/brotli/enc/entropy_encode.c
         ../../AnyOS/brotli/enc/histogram.c
         ../../AnyOS/brotli/enc/literal_cost.c
