Define BROTLI_SHARED_COMPILATION

--- a/src/Native/Unix/System.IO.Compression.Native/CMakeLists.txt
+++ b/src/Native/Unix/System.IO.Compression.Native/CMakeLists.txt
@@ -6,6 +6,8 @@ set(NATIVECOMPRESSION_SOURCES
     ../../AnyOS/zlib/pal_zlib.c
 )
 
+add_definitions(-DBROTLI_SHARED_COMPILATION)
+
 #Include Brotli include files
 include_directories("../../AnyOS/brotli/include")
 
