Update the OptionalTooling to work on .NET Core MSBuild.
The official build broke because I moved the Windows build on to .NET Core MSBuild. We have some OptionalTooling that only gets restored during the official build, and the current approach (using project.json) doesn't work on .NET Core MSBuild. So migrating the tooling to use normal MSBuild PackageReferences.

Fix #30758

--- a/dir.props
+++ b/dir.props
@@ -314,7 +314,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <OptionalToolingJsonPath>$(ProjectDir)\external\test-runtime\optional.json</OptionalToolingJsonPath>
+    <OptionalToolingProjectPath>$(ProjectDir)\external\test-runtime\optional.csproj</OptionalToolingProjectPath>
   </PropertyGroup>
 
   <PropertyGroup>
