--- a/src/System.Runtime/tests/TestLoadAssembly/TestLoadAssembly.csproj
+++ b/src/System.Runtime/tests/TestLoadAssembly/TestLoadAssembly.csproj
@@ -9,6 +9,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netstandard-Debug|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netstandard-Release|AnyCPU'" />
   <ItemGroup>
+    <Compile Include="ClassesSample.cs" />
     <Compile Include="TestLoadAssembly.cs" />
   </ItemGroup>
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.targets))\dir.targets" />
