Update the OptionalTooling to work on .NET Core MSBuild. (#30762)
* Update the OptionalTooling to work on .NET Core MSBuild.

The official build broke because I moved the Windows build on to .NET Core MSBuild. We have some OptionalTooling that only gets restored during the official build, and the current approach (using project.json) doesn't work on .NET Core MSBuild. So migrating the tooling to use normal MSBuild PackageReferences.

Fix #30758

* Respond to PR feedback.

Upper case each section of the package name in the MSBuild version property.

--- a/dependencies.props
+++ b/dependencies.props
@@ -50,6 +50,10 @@
     <XunitNetcoreExtensionsVersion>2.2.0-preview1-03002-01</XunitNetcoreExtensionsVersion>
 
     <!-- Roslyn optimization data package version -->
+    <MicrosoftDotNetIBCMergePackageVersion>4.6.0-alpha-00001</MicrosoftDotNetIBCMergePackageVersion>
+    <TestILCAmd64retPackageVersion>$(ProjectNTfsTestILCPackageVersion)</TestILCAmd64retPackageVersion>
+    <TestILCArmretPackageVersion>$(ProjectNTfsTestILCPackageVersion)</TestILCArmretPackageVersion>
+    <TestILCX86retPackageVersion>$(ProjectNTfsTestILCPackageVersion)</TestILCX86retPackageVersion>
     <OptimizationDataVersion>2.0.0-rc-61101-17</OptimizationDataVersion>
   </PropertyGroup>
 
@@ -240,9 +244,6 @@
       <PackageId>microsoft.xunit.runner.uwp</PackageId>
       <Version>$(AppXRunnerVersion)</Version>
     </DependencyBuildInfo>
-
-    <!-- project.json files to update -->
-    <ProjectJsonFiles Include="$(MSBuildThisFileDirectory)external\**\optional.json" />
   </ItemGroup>
 
   <!-- Override isolated build dependency versions with versions from Repo API. -->
