added tests AppDomain.CurrentDomain.CreateInstance, AppDomain.CurrentDomain.CreateInstanceFrom

--- a/src/System.Runtime.Extensions/tests/AssemblyResolveTests/AssemblyResolveTests.csproj
+++ b/src/System.Runtime.Extensions/tests/AssemblyResolveTests/AssemblyResolveTests.csproj
@@ -9,6 +9,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netstandard-Release|AnyCPU'" />
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="ClassesSample.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyAttributes.cs" />
