--- a/dir.targets
+++ b/dir.targets
@@ -93,6 +93,15 @@
     </BinPlaceConfiguration>
   </ItemGroup>
 
+  <PropertyGroup Condition="'$(BlockStable)' == 'true'">
+    <!--
+      If BlockStable is set to true then always include the label and build number in the package version.
+      This needs to be set before we import packaging.targets which comes in the Build.Common.targets.
+    -->
+    <IncludePreReleaseLabelInPackageVersion>true</IncludePreReleaseLabelInPackageVersion>
+    <IncludeBuildNumberInPackageVersion>true</IncludeBuildNumberInPackageVersion>
+  </PropertyGroup>
+
   <Import Project="$(ToolsDir)/Build.Common.targets" Condition="Exists('$(ToolsDir)/Build.Common.targets')" />
 
   <!-- permit a wrapping build system to contribute targets to this build -->
