--- a/src/System.Runtime.Extensions/src/System.Runtime.Extensions.csproj
+++ b/src/System.Runtime.Extensions/src/System.Runtime.Extensions.csproj
@@ -25,6 +25,7 @@
       <Link>Common\System\PasteArguments.cs</Link>
     </Compile>
     <Compile Include="System\AppDomain.cs" />
+    <Compile Include="System\AppDomainSetup.cs" />
     <Compile Include="System\AppDomainUnloadedException.cs" />
     <Compile Include="System\ApplicationId.cs" />
     <Compile Include="System\CannotUnloadAppDomainException.cs" />
