--- a/src/System.ComponentModel.Composition.Registration/ref/System.ComponentModel.Composition.Registration.csproj
+++ b/src/System.ComponentModel.Composition.Registration/ref/System.ComponentModel.Composition.Registration.csproj
@@ -3,9 +3,8 @@
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.props))\dir.props" />
   <PropertyGroup>
     <ProjectGuid>{6E0C5F44-0160-4082-A25C-2DB8EA7ED30D}</ProjectGuid>
+    <Configurations>netstandard-Debug;netstandard-Release</Configurations>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netstandard-Debug|AnyCPU'" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netstandard-Release|AnyCPU'" />
   <ItemGroup>
     <Compile Include="System.ComponentModel.Composition.Registration.cs" />
   </ItemGroup>
