bottom part of serial port support on Unix (#29033)
* bottom part of serial port support

* small cleanup

* feedback from reviews

* remove previous changes to System.Native

* feedback from review

* use consistently int32_t

* update names and types based on feedback

* feedback from kasper3

--- a/src/Native/Unix/CMakeLists.txt
+++ b/src/Native/Unix/CMakeLists.txt
@@ -238,6 +238,7 @@ endfunction()
 include(configure.cmake)
 
 add_subdirectory(System.IO.Compression.Native)
+add_subdirectory(System.IO.Ports.Native)
 
 add_compile_options(-Weverything)
 
