--- a/external/harvestPackages/harvestPackages.props
+++ b/external/harvestPackages/harvestPackages.props
@@ -67,6 +67,9 @@
 <PackageReference Include="System.Json">
   <Version>4.4.0</Version>
 </PackageReference>
+<PackageReference Include="System.Memory">
+  <Version>4.5.1</Version>
+</PackageReference>
 <PackageReference Include="System.Net.Http.WinHttpHandler">
   <Version>4.4.0</Version>
 </PackageReference>
@@ -89,7 +92,7 @@
   <Version>4.4.0</Version>
 </PackageReference>
 <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
-  <Version>4.4.0</Version>
+  <Version>4.5.1</Version>
 </PackageReference>
 <PackageReference Include="System.Security.AccessControl">
   <Version>4.4.0</Version>
