--- a/src/System.IO.Pipelines/ref/System.IO.Pipelines.csproj
+++ b/src/System.IO.Pipelines/ref/System.IO.Pipelines.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\System.Buffers\ref\System.Buffers.csproj" />
-    <ProjectReference Include="..\..\System.Memory\ref\System.Memory.csproj" />
     <ProjectReference Include="..\..\System.Threading.Tasks.Extensions\ref\System.Threading.Tasks.Extensions.csproj" />
+    <Reference Include="System.Memory" />
   </ItemGroup>
 </Project>
