minimal support for serial port on Linux

--- a/src/System.IO.Ports/src/Configurations.props
+++ b/src/System.IO.Ports/src/Configurations.props
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <PackageConfigurations>
       netstandard-Windows_NT;
+      netstandard-Linux;
       netstandard;
       netfx;
     </PackageConfigurations>
